testsuite/poke.pkl/pow-diag-2.pk
/* { dg-do compile } */

var a = "foo" ** 2; /* { dg-error "expected integral or offset" } */
